Menu_MiniPanels 6.x-1.x-dev, xxxx-xx-xx
---------------------------------------
#1553144 by DamienMcKenna: Removed some unnecessary code from
  menu_minipanels_preprocess_links_at_init().
#1264738 by DamienMcKenna: Added a note about 404 pages.
#1580072 by codycraven: Revert to using template_preprocess_page() for better
  compatibility with other modules.


Menu_MiniPanels 6.x-1.3-rc6, 2012-04-28
---------------------------------------
#1440474 by davidwhthomas, DamienMcKenna: Allow pages to be skipped by path.
#1535712 by DamienMcKenna: Quick links to toggle menus from the settings page.
#1551562 by DamienMcKenna: Don't load qTip code if no menu items configured.
#1535736 by DamienMcKenna: Documentation updates.


Menu_MiniPanels 6.x-1.3-rc5, 2012-04-08
---------------------------------------
#1505112 by DamienMcKenna: Updated API docs to indicate the custom styles JS
  file must be loaded after the module's JS that it may be necessary to load
  it from the theme.
#1199790 by DamienMcKenna: Fixed update 6101.
#1199790 by DamienMcKenna: Slight code cleanup on the update scripts.
#1337710 by DamienMcKenna: Slightly improved the settings menu item's
  description.
#1387914 by DamienMcKenna: Updated the README.txt file.
#1216546 by DamienMcKenna: Added support for the Hide Delay setting.
#1508776 by DamienMcKenna: Show the qTip library status on the settings page.
#1284396 by DamienMcKenna: Settings form UX improvements.


Menu_MiniPanels 6.x-1.3-rc4, 2012-03-23
---------------------------------------
#1370840 by DuaelFr: Stop searching for the JS file at the first matching path.
#1491396 by DamienMcKenna: Collision between admin and non-admin JS.
#1491502 by DamienMcKenna: Mention the Drush command in hook_requirements.
#1491490 by DamienMcKenna: Changed to use hook_form_FORM_ID_alter().
#1491514 by DamienMcKenna: Show minipanel name in menu edit form if the title
  is blank.
#1199790 by DamienMcKenna: Rewrote how the menus were identified, allowing all